<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="@drawable/fondo">

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fichero_3gp"
        android:textAppearance="?android:attr/textAppearanceMedium" android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fichero_3gp"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/black"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.71" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" android:gravity="center">

            <EditText
                android:id="@+id/ficheroAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"/>

            <ImageButton
                android:id="@+id/botonPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/play_stop" android:onClick="Play"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/botonGrabar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="0.16"
                    android:drawableLeft="@android:drawable/ic_btn_speak_now"
                    android:gravity="center"
                    android:onClick="PonteGrabar"
                    android:text="@string/grabar"
                    android:textSize="22dp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" android:visibility="invisible"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cifrar_descifrar"
                    android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/clave"
                    android:layout_width="match_parent"
                    android:layout_height="98dp"
                    android:ems="10"
                    android:gravity="center" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top" android:gravity="center">

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center" >

            <Button
                android:id="@+id/botonCifrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cifrar" android:onClick="CifrarFichero" android:drawableLeft="@drawable/seguro" android:textSize="20dp"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:gravity="center" >

            <Button
                android:id="@+id/botonDescifrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/Descifrar" android:onClick="DescifraFichero" android:drawableLeft="@drawable/abierto" android:textSize="20dp"/>

        </TableRow>

    </TableLayout>

</LinearLayout>